# ibus_freewnn

./: CMakeLists.txt  fwnn.xml.in
src/: CMakeLists.txt  convert.c  engine.c  fwnn.xml.in.in  fwnnserver.c  fwnnserver.h
